Add suit files config to pom.xml

--- a/pom.xml
+++ b/pom.xml
@@ -62,6 +62,14 @@
         <plugin>
           <artifactId>maven-surefire-plugin</artifactId>
           <version>2.22.1</version>
+          <configuration>
+            <suiteXmlFiles>
+              <suiteXmlFile>src/test/resources/logoutSuite.xml</suiteXmlFile>
+              <suiteXmlFile>src/test/resources/purchaseSuite.xml</suiteXmlFile>
+              <suiteXmlFile>src/test/resources/removeItemsFromCartSuite.xml</suiteXmlFile>
+              <suiteXmlFile>src/test/resources/testng.xml</suiteXmlFile>
+            </suiteXmlFiles>
+          </configuration>
         </plugin>
         <plugin>
           <artifactId>maven-jar-plugin</artifactId>
