--- a/jenkins/Jenkinsfile
+++ b/jenkins/Jenkinsfile
@@ -1,6 +1,10 @@
 pipeline {
     agent any
 
+    parameters{
+            text(name:"URL", defaultValue:"https://www.saucedemo.com/", description:"url")
+    }
+
     tools {
         // Install the Maven version configured as "M3" and add it to the path.
         maven "M3"
@@ -16,7 +20,7 @@ pipeline {
                 //sh "mvn -Dmaven.test.failure.ignore=true clean package"
 
                 // To run Maven on a Windows agent, use
-                bat "mvn clean verify"
+                bat "mvn clean verify -DURL=${params.URL}"
             }
 
             post {
